schema/testdata/errors/where_expression_invalid_operands.keel
model Person {
    fields {
        identity Identity
        organisation Organisation
    }

    actions {
        list listPeople() {
            //expect-error:32:39:AttributeExpressionError:unknown identifier 'invalid'
            @where(expression: invalid)
        }
        list listPeople2() {
            //expect-error:32:34:AttributeExpressionError:unknown identifier 'ct'
            @where(expression: ct.identity == person.identity)
        }
        list listPeople3() {
            //expect-error:35:36:AttributeExpressionError:field 'invalid' does not exist
            @where(expression: ctx.invalid == person.identity)
        }
        list listPeople4() {
            //expect-error:32:38:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
            @where(expression: "true")
        }
        list listPeople5() {
            //expect-error:67:68:AttributeExpressionError:field 'invalid' does not exist
            @where(expression: ctx.identity in person.organisation.invalid)
        }
        list listPeople6() {
            //expect-error:90:91:AttributeExpressionError:field 'invalid' does not exist
            @where(expression: ctx.isAuthenticated && ctx.identity in person.organisation.invalid)
        }
        list listPeople7() {
            //expect-error:98:99:AttributeExpressionError:field 'invalid' does not exist
            //expect-error:51:52:AttributeExpressionError:type Boolean does not have any fields to select
            @where(expression: ctx.isAuthenticated.invalid && ctx.identity in person.organisation.invalid)
        }
    }
}

model Organisation {
    fields {
        people Person[]
    }
}
